[package]
name = "amethyst-ecs-benchmarks"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion = { git = "https://github.com/katharostech/legion.git", branch = "ktech-updates", features = ["blanket-impl-comp"] }
nalgebra = "*"
rayon = "*"

specs-hierarchy = "0.5.1"
amethyst_core = { git = "https://github.com/amethyst/amethyst", features = ["nightly"] }

# Profiling
flame = { git = "https://github.com/TyOverby/flame.git" }
flamer = "*"

# Logging
slog = { version = "2.4", features = ["max_level_trace", "release_max_level_info", "nested-values"] }
slog-term = "2"
slog-async = "2"

# Benchmarking
criterion = "0.2"

[[bench]]
name = "legion"
harness = false

[[bench]]
name = "specs"
harness = false